# storyden

./: .dockerignore  .gitignore  .golangci.yml  .impeccable.md  .nvmrc  .vercelignore  AGENTS.md  CLAUDE.md  Dockerfile  LOCAL_DEVELOPMENT.md  README.md  Taskfile.yml  cookies.txt  docker-compose-extra-infra.yml  docker-compose.live.yml  docker-compose.yml  fly.toml  generate.go  go.mod  go.sum  gqlgen.yml  package-lock.json  package.json  renovate.json  skills-lock.json  tools.go  version.go
api/: README.md  config.yaml  generate.go  main.go  openapi.go  openapi.yaml  plugin.yaml  robots.yaml  schemancer.yaml  thread.graphqls
backend/: README.md
docs/: theming-contract.md
email/: package-lock.json  package.json  template_welcome.mjml
home/: .gitignore  fonts.css  generate-openapi.mjs  generate-openapi.ts  next.config.mjs  package.json  panda.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  proxy.ts  seo.js  source.config.ts  styles.css  theme.config.jsx  tsconfig.json
mcp/: README.md  bindings.go  bindings_test.go  embed.go  embed_test.go  generate.go  mcp_schema.go  schema.yaml
migrations/: 20220423194025_init.down.sql  20220423194025_init.up.sql  20220825182620_genesis.sql  20220825183227_genesis.sql  atlas.sum
prisma/: schema.prisma
reference/: rfc6749.txt
scripts/: boot_analysis.ipynb
sdk/examples/simple_python/: README.md  example.env  main.py  manifest.yaml  pyproject.toml
tests/: .gitignore  default_role_test.go  email.go  environment.go  guest_library_test.go  util.go
web/: .eslintrc.json  .gitignore  .prettierrc.json  (+14 more)
(+7110 files in other folders)
