[project]
  dependencies    = ["storyden", "python-dotenv"]
  name            = "storyden-plugin-basic"
  requires-python = ">=3.11"
  version         = "0.1.0"

[build-system]
  build-backend = "hatchling.build"
  requires      = ["hatchling>=1.26.0"]

[dependency-groups]
  dev = ["ruff", "ty"]

[tool.uv.sources]
  storyden = { path = "../../python", editable = true }

[tool.hatch.build.targets.wheel]
  packages = ["storyden_plugin_basic"]
